Closed Bug 373036 Opened 19 years ago Closed 19 years ago

No longer receiving caret events in FF

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: parente, Assigned: aaronlev)

References

(Blocks 1 open bug)

Details

(Keywords: access, regression)

Attachments

(1 file)

Between the 03/06 and 03/07 nightly builds, something regressed caret events. We are now no longer receiving all caret or text events on entry fields. All we get now is an event when all text in the field is deleted. This has been confirmed in LSR, Accerciser, and at-poke as a back-up.
Blocks: texta11y
Keywords: access
Attachment #257851 - Flags: review? → review?(parente)
Attachment #257851 - Flags: review?(parente) → review+
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: