Bug 373036. Text caret move events no longer getting fired. r=parente